--- a/style.css
+++ b/style.css
@@ -178,3 +178,23 @@ google-cast-launcher{
   --disconnected-color: #ffffff;
   --connected-color: var(--accent);
 }
+
+google-cast-launcher {
+  display: block;
+  width: 38px;
+  height: 38px;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 5px;
+
+  --disconnected-color: white;
+  --connected-color: var(--accent);
+}
+google-cast-launcher:hover {
+  transform: scale(1.1) rotate(15deg);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+google-cast-launcher:active {
+  transform: scale(0.9) rotate(-10deg);
+}
